HTTP::Tiny upgrade java module to use java.net.URI and java.net.http.HttpClient