@@ -5,40 +5,30 @@ import org.perlonjava.runtime.RuntimeHash;
 import org.perlonjava.runtime.RuntimeList;
 import org.perlonjava.runtime.RuntimeScalar;
 
-import javax.net.ssl.*;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
-import java.net.Proxy;
-import java.net.URL;
+import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-/**
- * The {@code HttpTiny} class emulates the HTTP::Tiny Perl module, providing methods for HTTP requests.
- */
-public class HttpTiny extends PerlModuleBase {
+import static org.perlonjava.runtime.RuntimeHash.createHash;
 
-    // Define attributes
-    private static final String userAgent = "HTTP-Tiny/0.090";
-    private static final int timeout = 60000; // 60 seconds
-    private static final boolean verifySSL = true;
-    private static final Map<String, String> defaultHeaders = new HashMap<>();
-    private static String localAddress;
-    private static final boolean keepAlive = true;
-    private static final int maxRedirect = 5;
-    private static int maxSize;
-    private static String httpProxy;
-    private static String httpsProxy;
-    private static String proxy = null;
-    private static List<String> noProxy;
-    private static Map<String, Object> sslOptions;
+public class HttpTiny extends PerlModuleBase {
+    private static final String USER_AGENT = "HTTP-Tiny/0.090";
+    private static final int TIMEOUT = 60_000; // 60 seconds
+    private static final boolean VERIFY_SSL = true;
+
+    private final HttpClient client;
+    private final Map<String, String> defaultHeaders;
 
     public HttpTiny() {
         super("HTTP::Tiny");
+        this.defaultHeaders = new HashMap<>();
+        this.client = createHttpClient();
     }
 
     public static void initialize() {
@@ -59,8 +49,8 @@ public class HttpTiny extends PerlModuleBase {
         if (args.size() != 1) {
             throw new IllegalStateException("Bad number of arguments for HTTP::Tiny->new");
         }
-        RuntimeScalar className = args.get(0);
-        RuntimeScalar instance = new RuntimeHash().createReference();
+        RuntimeScalar className = args.shift();
+        RuntimeScalar instance = createHash(args).createReference();
         instance.bless(className);
         return instance.getList();
     }
@@ -78,14 +68,6 @@ public class HttpTiny extends PerlModuleBase {
                 new RuntimeHash().createReference())), ctx);
     }
 
-    /**
-     * Performs a POST request.
-     *
-     * @param args the runtime array containing the URL and content
-     * @param ctx  the runtime context
-     * @return a {@link RuntimeList} containing the response
-     * @throws Exception if an error occurs during the request
-     */
     public static RuntimeList post(RuntimeArray args, int ctx) throws Exception {
         if (args.size() != 3) {
             throw new IllegalStateException("Bad number of arguments for HTTP::Tiny->post");
@@ -104,119 +86,86 @@ public class HttpTiny extends PerlModuleBase {
         if (args.size() < 3) {
             throw new IllegalStateException("Bad number of arguments for HTTP::Tiny->request");
         }
+
         RuntimeScalar self = args.get(0);
         String method = args.get(1).toString();
         String url = args.get(2).toString();
         RuntimeHash options = args.size() > 3 ? args.get(3).hashDeref() : new RuntimeHash();
 
-        // Handle options like headers, content, etc.
+        // Handle options
         RuntimeHash headers = options.exists("headers").getBoolean()
                 ? options.get("headers").hashDeref() : new RuntimeHash();
-        String content = options.get("content").toString();
+        String content = options.get("content") != null ? options.get("content").toString() : "";
 
-        URL obj = new URL(url);
-        HttpURLConnection con;
+        // Create request builder
+        HttpRequest.Builder requestBuilder = HttpRequest.newBuilder()
+                .uri(URI.create(url))
+                .method(method, HttpRequest.BodyPublishers.ofString(content));
 
-        // Handle proxy settings
-        if (proxy != null && !isNoProxy(url)) {
-            Proxy proxyObj = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxy, 80));
-            con = (HttpURLConnection) obj.openConnection(proxyObj);
-        } else {
-            con = (HttpURLConnection) obj.openConnection();
-        }
+        // Set headers
+        requestBuilder.header("User-Agent", USER_AGENT);
+        // requestBuilder.header("Connection", "keep-alive");
 
-        con.setRequestMethod(method);
+        // Add default and custom headers
+        headers.elements.forEach((key, value) ->
+                requestBuilder.header(key, value.toString())
+        );
 
-        // Set default headers
-        con.setRequestProperty("User-Agent", userAgent);
-        for (Map.Entry<String, String> entry : defaultHeaders.entrySet()) {
-            con.setRequestProperty(entry.getKey(), entry.getValue());
-        }
-
-        // Override with specific headers if provided
-        for (Map.Entry<String, RuntimeScalar> entry : headers.elements.entrySet()) {
-            con.setRequestProperty(entry.getKey(), entry.getValue().toString());
-        }
-
-        // Set timeouts
-        con.setConnectTimeout(timeout);
-        con.setReadTimeout(timeout);
-
-        // Handle SSL verification
-        if (!verifySSL && con instanceof HttpsURLConnection) {
-            ((HttpsURLConnection) con).setSSLSocketFactory(createInsecureSSLSocketFactory());
-            ((HttpsURLConnection) con).setHostnameVerifier((hostname, session) -> true);
-        }
-
-        // Send request body if present
-        if (!content.isEmpty()) {
-            con.setDoOutput(true);
-            con.setRequestProperty("Content-Length", Integer.toString(content.length()));
-            try (OutputStream os = con.getOutputStream()) {
-                os.write(content.getBytes());
-                os.flush();
-            }
-        }
-
-        // Get response
-        int responseCode = con.getResponseCode();
-        BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-        String inputLine;
-        StringBuilder response = new StringBuilder();
-        while ((inputLine = in.readLine()) != null) {
-            response.append(inputLine);
-        }
-        in.close();
-
-        // Prepare response map
-        RuntimeHash responseMap = new RuntimeHash();
-        responseMap.put("success", new RuntimeScalar(responseCode >= 200 && responseCode < 300));
-        responseMap.put("status", new RuntimeScalar(responseCode));
-        responseMap.put("reason", new RuntimeScalar(con.getResponseMessage()));
-        responseMap.put("content", new RuntimeScalar(response.toString()));
-
-        // Collect headers
-        RuntimeHash responseHeaders = new RuntimeHash();
-        con.getHeaderFields().forEach((key, value) -> {
-            if (key != null) {
-                responseHeaders.put(key.toLowerCase(), new RuntimeScalar(String.join(", ", value)));
-            }
-        });
-        responseMap.put("headers", responseHeaders.createReference());
-
-        return responseMap.createReference().getList();
-    }
-
-    // Helper method to check if a URL should bypass the proxy
-    private static boolean isNoProxy(String url) {
-        if (noProxy == null) return false;
-        for (String host : noProxy) {
-            if (url.contains(host)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    // Helper method to create an insecure SSL socket factory
-    private static SSLSocketFactory createInsecureSSLSocketFactory() {
+        // Build and send request
+        HttpRequest request = requestBuilder.build();
         try {
-            SSLContext sc = SSLContext.getInstance("TLS");
-            sc.init(null, new TrustManager[]{new X509TrustManager() {
-                public java.security.cert.X509Certificate[] getAcceptedIssuers() {
-                    return null;
-                }
+            HttpTiny self1 = new HttpTiny();
+            HttpResponse<String> response = self1.client.send(request, HttpResponse.BodyHandlers.ofString());
 
-                public void checkClientTrusted(java.security.cert.X509Certificate[] certs, String authType) {
-                }
+            // Prepare response map
+            RuntimeHash responseMap = new RuntimeHash();
+            responseMap.put("success", new RuntimeScalar(response.statusCode() >= 200 && response.statusCode() < 300));
+            responseMap.put("status", new RuntimeScalar(response.statusCode()));
+            responseMap.put("reason", new RuntimeScalar(getStatusReason(response.statusCode())));
+            responseMap.put("content", new RuntimeScalar(response.body()));
 
-                public void checkServerTrusted(java.security.cert.X509Certificate[] certs, String authType) {
-                }
-            }}, new java.security.SecureRandom());
-            return sc.getSocketFactory();
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to create an insecure SSL socket factory", e);
+            // Collect headers
+            RuntimeHash responseHeaders = new RuntimeHash();
+            response.headers().map().forEach((key, value) ->
+                    responseHeaders.put(key.toLowerCase(), new RuntimeScalar(String.join(", ", value)))
+            );
+            responseMap.put("headers", responseHeaders.createReference());
+
+            return responseMap.createReference().getList();
+        } catch (IOException | InterruptedException e) {
+            throw new RuntimeException("HTTP request failed", e);
         }
+    }
+
+    private static String getStatusReason(int statusCode) {
+        // Simple status reason mapping (you might want to expand this)
+        return switch (statusCode) {
+            case 200 -> "OK";
+            case 201 -> "Created";
+            case 204 -> "No Content";
+            case 400 -> "Bad Request";
+            case 401 -> "Unauthorized";
+            case 403 -> "Forbidden";
+            case 404 -> "Not Found";
+            case 500 -> "Internal Server Error";
+            default -> "Unknown Status";
+        };
+    }
+
+    private HttpClient createHttpClient() {
+        HttpClient.Builder builder = HttpClient.newBuilder()
+                .connectTimeout(Duration.ofMillis(TIMEOUT))
+                .version(HttpClient.Version.HTTP_1_1);
+
+        if (!VERIFY_SSL) {
+//            try {
+//                builder.sslContext(createInsecureSSLContext())
+//                        .hostnameVerifier((hostname, session) -> true);
+//            } catch (Exception e) {
+//                throw new RuntimeException("Failed to create insecure SSL context", e);
+//            }
+        }
+
+        return builder.build();
     }
 }
-
